testsuite/escript/switch/switch17-duplicate-default.err
switch17-duplicate-default.src:5:5: error: case statement already has a default clause.