testsuite/escript/switch/switch17-duplicate-default.src
var x;
case ( x )
  default: print( "first" );
  default: print( "second" );
endcase
